syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "relation/api/toktik/relation;relation";
import "api/toktik/common/user.proto";

// 关注
service FollowAction {
  rpc FollowActionSrv(FollowActionRequest) returns (FollowActionResponse) {
    option (google.api.http) = {
      post : "/douyin/relation/action"
      body : "*"
    };
  }
}

// 关注列表
service FollowList {
  rpc FollowListSrv(FollowListRequest) returns (FollowListResponse) {
    option (google.api.http) = {
      get : "/douyin/relation/follow/list"
    };
  }
}

// 粉丝列表
service FollowerList {
  rpc FollowerListSrv(FollowerListRequest) returns (FollowerListResponse) {
    option (google.api.http) = {
      get : "/douyin/relation/follower/list"
    };
  }
}

// 朋友列表
service FriendList {
  rpc FriendListSrv(FriendListRequest) returns (FriendListResponse) {
    option (google.api.http) = {
      get : "/douyin/relation/friend/list"
    };
  }
}

message FollowActionRequest {
  string token = 1;      // 用户鉴权token
  int64 to_user_id = 2;  // 对方用户id
  int32 action_type = 3; // 1-关注，2-取消关注
}

message FollowActionResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message FollowListRequest {
  int64 user_id = 1; // 用户id
  string token = 2;  // 用户鉴权token
}

message FollowListResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated User user_list = 3;    // 用户信息列表
}

message FollowerListRequest {
  int64 user_id = 1; // 用户id
  string token = 2;  // 用户鉴权token
}

message FollowerListResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated User user_list = 3;    // 用户列表
}

message FriendListRequest {
  int64 user_id = 1; // 用户id
  string token = 2;  // 用户鉴权token
}

message FriendListResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated User user_list = 3;    // 用户列表
}
